# LocalIndexer

./: README.md  package.json
frontend/: index.html  package.json  types.d.ts
frontend/src/: apps.ts  folderTypes.ts  index.css  main.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crawler.rs  folder_type.rs  indexer_metadata.rs  lib.rs  main.rs
src-tauri/src/actions/: dispatch.rs  execute.rs  mod.rs  target.rs
src-tauri/src/config/: folder_types.rs  mod.rs
src-tauri/src/db/: index_sources.rs  mod.rs  queries.rs  schema.sql
