[package]
name = "localindexer"
version = "0.1.0"
description = "A local indexing tool made in Typescript, and Tauri (Rust)"
authors = ["AaryanKhClasses"]
license = "GNU-GPLv3.0"
repository = "https://github.com/AaryanKhClasses/LocalIndexer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
globset = "0.4"
walkdir = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
open = "5"
